--- a/css/all.css
+++ b/css/all.css
@@ -66,24 +66,32 @@ h1, h2, h3, h4, h5, h6, a{
 	height: auto;
 }
 .background-img {
-    pointer-events: none;
-    position: absolute;
-    width: 100%;
-    height: auto;
-    z-index: -1;
+	pointer-events: none;
+	position: absolute;
+	width: 100%;
+	height: auto;
+	z-index: -1;
 }
 ::selection {
-    background-color: #0274be;
-    color: #ffffff;
+	background-color: #0274be;
+	color: #ffffff;
 }
 div.text-con{
-    max-width:900px;
-    margin:auto;
-    padding-left:20px;
-    padding-right:20px;
+	max-width:900px;
+	margin:auto;
+	padding-left:20px;
+	padding-right:20px;
 }
 a.text-con{
-    font-weight:400;
-    line-height:1.85714285714286;
-    text-align:center;
+	font-weight:400;
+	line-height:1.85714285714286;
+	text-align:center;
+}
+.flex-element {
+	flex: 20%;
+}
+@media (max-width: 700px) {
+	.flex-element {
+		flex: 100%;
+	}
 }
